# turboquant-vllm

./: .gitignore  README.md  apply_all_patches.py  comparison.html  pyproject.toml
tests/: test_codebook.py  test_quantizer.py  test_triton_kernels.py  test_vllm_integration.py
turboquant/: __init__.py  benchmark.py  codebook.py  quantizer.py  triton_kernels.py
vllm_integration/vllm/config/: cache.py
vllm_integration/vllm/model_executor/layers/attention/: attention.py
vllm_integration/vllm/model_executor/layers/quantization/: kv_cache.py
vllm_integration/vllm/utils/: torch_utils.py
vllm_integration/vllm/v1/attention/backends/: flash_attn.py  triton_attn.py
vllm_integration/vllm/v1/attention/ops/: turboquant_cache.py
